@@ -1,3 +1,12 @@
+2005-02-08  Darin Adler  <darin@apple.com>
+
+        "Reviewed" by Richard (he told me the file was obsolete).
+
+        - got rid of an obsolete file
+
+        * Plugins.subproj/npsap.h: Removed.
+        * copy-webcore-files-to-webkit: Removed npsap.h.
+
 2005-02-09  Richard Williamson   <rjw@apple.com>
 
 	Fixed <rdar://problem/4000073> non-screen font error on www.worldofwarcraft.com
